Fix typo in CSS property for telaInicial

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ button{cursor:pointer}
 
 #telaInicial{
 height:100vh;display:flex;flex-direction:column;
-justify-content:center;align-items:center;
+justify-cntent:center;align-items:center;
 background:linear-gradient(135deg,#2563eb,#7c3aed);
 color:#fff;text-align:center
 }
